--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ dependencies {
     //multitex
     implementation 'com.android.support:multidex:1.0.3'
 
+    //youtube
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
+
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
