--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,20 +28,18 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:largeHeap="true"
         android:theme="@style/AppThemes">
-        <activity android:name=".UI.Activity.SplashScreen" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".UI.Activity.SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".UI.Activity.SlideOptionScreen" >
-
-        </activity>
+        <activity android:name=".UI.Activity.SlideOptionScreen" />
         <activity
             android:name=".UI.Activity.LoginScreen"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -58,27 +56,39 @@
         <activity android:name=".UI.Activity.ContentList" />
         <activity
             android:name=".UI.DemoDesignTestScreen"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-        <activity android:name=".UI.MainTabHostScreens.TabMainActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabMainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".UI.MainTabHostScreens.TabHomeNewDesign"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabHomeNewDesign"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".UI.MainTabHostScreens.TabSearchActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabSearchActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".UI.MainTabHostScreens.TabPostOptionsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabPostOptionsActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".UI.MainTabHostScreens.TabVideoActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabVideoActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".UI.MainTabHostScreens.TabAccountActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabAccountActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.MainTabHostScreens.SearchScreens.SearchActivity"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".UI.Activity.InterestListScreen"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".UI.Activity.CategoryContentList"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
