--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'merabihar'
+            keyPassword '123456789'
+            storeFile file('D:/New MeraBihar/Bihar/app/merabiharkey.jks')
+            storePassword '123456789'
+        }
+    }
     compileSdkVersion 27
     defaultConfig {
         applicationId "tv.merabihar.app.merabihar"
@@ -20,39 +28,30 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //multitex
     implementation 'com.android.support:multidex:1.0.3'
-
     //youtube
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
-
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:cardview-v7:27.1.1'
-
     compile 'com.alexzh:circleimageview:1.1.2@aar'
     compile 'com.github.rey5137:material:1.2.2'
     compile 'com.mikhaellopez:circularimageview:2.0.1'
-
     compile 'com.makeramen:roundedimageview:2.3.0'
-
     compile 'me.relex:circleindicator:1.2.2@aar'
-
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-
     //round image
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
