--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:2.0.1'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.facebook.fresco:fresco:0.11.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
