--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemes">
-        <activity android:name=".UI.Activity.SplashScreen" />
+        <activity android:name=".UI.Activity.SplashScreen">
+
+        </activity>
         <activity android:name=".UI.Activity.SlideOptionScreen" />
         <activity
             android:name=".UI.Activity.LoginScreen"
@@ -84,30 +86,14 @@
         <activity
             android:name=".UI.Activity.CategoryContentList"
             android:theme="@style/AppTheme" />
-        <activity
-            android:name=".UI.Activity.InterestContentListScreen"
-            android:theme="@style/AppTheme" />
-        <activity android:name=".UI.Activity.VideoPlayerScreen" />
-        <activity
-            android:name=".UI.YoutubePlayList.YouTubeListScreen"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".UI.MainTabHostScreens.PostContent.PostContentScreen"
-            android:theme="@style/AppTheme" />
-        <activity
-            android:name=".UI.MainTabHostScreens.PostContent.PostVideoYoutubeContent"
-            android:theme="@style/AppTheme" />
+        <activity android:name=".UI.Activity.SettingScreen">
 
-        <provider
-            android:name="android.support.v4.content.FileProvider"
-            android:authorities="@string/file_provider_authority"
-            android:exported="false"
-            android:grantUriPermissions="true">
-            <meta-data
-                android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_provider_path" />
-        </provider>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign" />
         <activity
             android:name=".UI.Activity.FollowOptions.FollowOptionsActivity"
@@ -119,11 +105,7 @@
             android:name=".UI.Activity.Influencer.InfluencerProgramViewScreen"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".UI.Activity.Influencer.InviteScreen">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".UI.Activity.Influencer.InviteFriendsScreen" />
         <activity android:name=".UI.Activity.Influencer.FriendListScreen"></activity>
