--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemes">
         <activity android:name=".UI.Activity.SplashScreen">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
         </activity>
         <activity android:name=".UI.Activity.SlideOptionScreen" />
@@ -115,6 +119,10 @@
 
 
         </activity>
+        <activity
+            android:name=".UI.YoutubePlayList.YouTubeListScreen"
+            />
+
     </application>
 
 </manifest>
