--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+
+    // custom loader
+    compile 'com.tuyenmonkey:mkloader:1.4.0'
 
     //round image
     implementation 'de.hdodenhof:circleimageview:2.1.0'
