--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:2.0.1'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
-    compile 'com.facebook.fresco:fresco:0.11.0'
+//    compile 'com.facebook.fresco:fresco:0.11.0'
+    implementation 'com.facebook.fresco:fresco:1.11.0'
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.googlecode.json-simple:json-simple:1.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
@@ -62,4 +63,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+
 }
