--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,13 +33,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemes">
         <activity android:name=".UI.Activity.SplashScreen">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".UI.Activity.SlideOptionScreen" />
         <activity
@@ -92,8 +90,7 @@
         <activity
             android:name=".UI.Activity.CategoryContentList"
             android:theme="@style/AppTheme" />
-
-        <activity android:name=".UI.Activity.SettingScreen"></activity>
+        <activity android:name=".UI.Activity.SettingScreen" />
         <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign" />
         <activity
             android:name=".UI.Activity.FollowOptions.FollowOptionsActivity"
@@ -101,6 +98,7 @@
         <activity
             android:name=".UI.Activity.CommentsScreen"
             android:theme="@style/AppTheme" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="@string/file_provider_authority"
@@ -113,16 +111,15 @@
 
         <activity
             android:name=".UI.Activity.Influencer.InfluencerProgramViewScreen"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".UI.Activity.Influencer.InviteScreen" />
         <activity android:name=".UI.Activity.Influencer.InviteFriendsScreen" />
         <activity android:name=".UI.Activity.FriendList.FriendListScreen" />
-        <activity android:name=".UI.Activity.Influencer.InfluencerProgramDetailScreen"></activity>
-        <activity android:name=".UI.Activity.Influencer.Income"></activity>
+        <activity android:name=".UI.Activity.Influencer.InfluencerProgramDetailScreen" />
+        <activity android:name=".UI.Activity.Influencer.Income" />
         <activity android:name=".UI.YoutubePlayList.YouTubeListScreen" />
-        <activity android:name=".UI.MainTabHostScreens.VideoCategoryScreens">
-
-
+        <activity android:name=".UI.MainTabHostScreens.VideoCategoryScreens"></activity>
+        <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity">
         </activity>
     </application>
 
