--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    allprojects {
+        repositories {
+            maven { url "https://jitpack.io" }
+        }
+    }
 }
 
 dependencies {
@@ -46,6 +52,9 @@ dependencies {
     compile 'com.mikhaellopez:circularimageview:2.0.1'
     compile 'com.makeramen:roundedimageview:2.3.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile 'com.facebook.fresco:fresco:0.11.0'
+    implementation 'com.github.Commit451.YouTubeExtractor:youtubeextractor:2.1.0'
+    compile 'com.github.HaarigerHarald:android-youtubeExtractor:master-SNAPSHOT'
 //    compile 'com.facebook.fresco:fresco:0.11.0'
     implementation 'com.facebook.fresco:fresco:1.11.0'
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -63,6 +72,4 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-
 }
