influencer pgm detail screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="tv.merabihar.app.merabihar">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -37,13 +36,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppThemes">
         <activity android:name=".UI.Activity.SplashScreen">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".UI.Activity.SlideOptionScreen" />
         <activity
@@ -104,8 +101,7 @@
         <activity
             android:name=".UI.Activity.CategoryContentList"
             android:theme="@style/AppTheme" />
-
-        <activity android:name=".UI.Activity.SettingScreen"></activity>
+        <activity android:name=".UI.Activity.SettingScreen" />
         <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign" />
         <activity
             android:name=".UI.Activity.FollowOptions.FollowOptionsActivity"
@@ -119,6 +115,7 @@
         <activity
             android:name=".UI.Activity.CommentsScreen"
             android:theme="@style/AppTheme" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="@string/file_provider_authority"
@@ -145,6 +142,9 @@
 
         <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity">
         </activity>
+        <activity android:name=".UI.MainTabHostScreens.VideoCategoryScreens" />
+        <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity"></activity>
+        <activity android:name=".UI.Activity.Influencer.WithdrawMoney"></activity>
     </application>
 
 </manifest>
