--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -128,23 +128,20 @@
 
         <activity
             android:name=".UI.Activity.Influencer.InfluencerProgramViewScreen"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".UI.Activity.Influencer.InviteScreen" />
         <activity android:name=".UI.Activity.Influencer.InviteFriendsScreen" />
         <activity android:name=".UI.Activity.FriendList.FriendListScreen" />
-        <activity android:name=".UI.Activity.Influencer.InfluencerProgramDetailScreen"></activity>
-        <activity android:name=".UI.Activity.Influencer.Income"></activity>
+        <activity android:name=".UI.Activity.Influencer.InfluencerProgramDetailScreen" />
+        <activity android:name=".UI.Activity.Influencer.Income" />
         <activity android:name=".UI.YoutubePlayList.YouTubeListScreen" />
         <activity android:name=".UI.MainTabHostScreens.VideoCategoryScreens" />
-        <activity android:name=".UI.Activity.ContentListScreen">
-        </activity>
-        <activity android:name=".UI.MainTabHostScreens.TabHomeHostScreen"></activity>
-
-        <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity">
-        </activity>
-        <activity android:name=".UI.MainTabHostScreens.VideoCategoryScreens" />
-        <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity"></activity>
-        <activity android:name=".UI.Activity.Influencer.WithdrawMoney"></activity>
+        <activity android:name=".UI.Activity.ContentListScreen" />
+        <activity android:name=".UI.MainTabHostScreens.TabHomeHostScreen" />
+        <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity" />
+        <activity android:name=".UI.Activity.Influencer.WithdrawMoney" />
+        <activity android:name=".UI.MainTabHostScreens.TabSearchActivity2" />
+        <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign2"></activity>
     </application>
 
 </manifest>
