--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -115,10 +115,11 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".UI.MainTabHostScreens.PostContent.PostVideoYoutubeContent"
-            android:theme="@style/AppTheme.NoActionBar"  />
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".UI.Activity.CommentsScreen"
             android:theme="@style/AppTheme" />
+
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="@string/file_provider_authority"
@@ -131,27 +132,27 @@
 
         <activity
             android:name=".UI.Activity.Influencer.InfluencerProgramViewScreen"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".UI.Activity.Influencer.InviteScreen" />
         <activity android:name=".UI.Activity.Influencer.InviteFriendsScreen" />
         <activity android:name=".UI.Activity.FriendList.FriendListScreen" />
-        <activity android:name=".UI.Activity.Influencer.InfluencerProgramDetailScreen"></activity>
-        <activity android:name=".UI.Activity.Influencer.Income"></activity>
+        <activity android:name=".UI.Activity.Influencer.InfluencerProgramDetailScreen" />
+        <activity android:name=".UI.Activity.Influencer.Income" />
         <activity android:name=".UI.YoutubePlayList.YouTubeListScreen" />
         <activity android:name=".UI.MainTabHostScreens.VideoCategoryScreens" />
         <activity android:name=".UI.Activity.ContentListScreen" />
         <activity android:name=".UI.MainTabHostScreens.TabHomeHostScreen" />
         <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity" />
-        <activity android:name=".UI.Activity.Influencer.WithdrawMoney" >
-
-        </activity>
-
-        <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign2"/>
-
-        <activity android:name=".UI.MainTabHostScreens.TabSearchActivity2"
+        <activity android:name=".UI.Activity.Influencer.WithdrawMoney"></activity>
+        <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign2" />
+        <activity
+            android:name=".UI.MainTabHostScreens.TabSearchActivity2"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".UI.Activity.Influencer.Records" />
+        <activity android:name=".UI.Activity.TimeWatchedScreen">
 
+        </activity>
     </application>
 
 </manifest>
