--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,9 @@ android {
         applicationId "tv.merabihar.app.merabihar"
         minSdkVersion 19
         targetSdkVersion 27
-        versionCode 2
-        versionName "1.1"
+        versionCode 3
+        multiDexEnabled true
+        versionName "1.2"
         vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -43,6 +44,7 @@ dependencies {
     })
     //multitex
     implementation 'com.android.support:multidex:1.0.3'
+
     //youtube
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'com.android.support:appcompat-v7:27.1.1'
