--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    // material search design
+    compile 'com.miguelcatalan:materialsearchview:1.4.0'
+
 }
 
 
