Youtube Player listner

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemes">
-
         <activity android:name=".UI.Activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +42,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".UI.Activity.SlideOptionScreen" />
         <activity
             android:name=".UI.Activity.LoginScreen"
@@ -145,17 +143,18 @@
         <activity android:name=".UI.Activity.ContentListScreen" />
         <activity android:name=".UI.MainTabHostScreens.TabHomeHostScreen" />
         <activity android:name=".UI.MainTabHostScreens.TabPostMediaActivity" />
-        <activity android:name=".UI.Activity.Influencer.WithdrawMoney"></activity>
+        <activity android:name=".UI.Activity.Influencer.WithdrawMoney" />
         <activity android:name=".UI.MainTabHostScreens.TabVideoNewDesign2" />
         <activity
             android:name=".UI.MainTabHostScreens.TabSearchActivity2"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".UI.Activity.Influencer.Records" />
-        <activity android:name=".UI.Activity.TimeWatchedScreen"></activity>
+        <activity android:name=".UI.Activity.TimeWatchedScreen" />
 
         <service android:name=".Service.BackgroundNotificationService" />
         <service android:name=".Service.VideoWatchedService" />
+        <service android:name=".Service.ContentDataBaseService" />
 
         <activity android:name=".UI.Activity.PhoneNumberVerficationActivity" />
         <activity
@@ -167,12 +166,12 @@
         <activity
             android:name=".UI.Activity.FollowingProfileListScreen"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".UI.Activity.FollowersListScreen"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
-        <activity android:name=".UI.YoutubeSearch.YoutubeSearchScreenMain">
-
-        </activity>
+        <activity
+            android:name=".UI.Activity.FollowersListScreen"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".UI.YoutubeSearch.YoutubeSearchScreenMain" />
+        <activity android:name=".UI.Activity.WatchedHistroyScreen" />
+        <activity android:name=".UI.Activity.TargetWatchTime"></activity>
     </application>
 
 </manifest>
