--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,8 +89,11 @@ dependencies {
     // material search design
     compile 'com.miguelcatalan:materialsearchview:1.4.0'
 
-}
 
+    compile 'com.library.tangxiaolv:telegramgallery:1.0.5'
+
+
+}
 
 
 
