--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,10 +29,10 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:hardwareAccelerated="false"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppThemes">
@@ -170,10 +170,24 @@
             android:name=".UI.Activity.FollowersListScreen"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".UI.YoutubeSearch.YoutubeSearchScreenMain" />
-        <activity android:name=".UI.Activity.WatchedHistroyScreen" />
-        <activity android:name=".UI.Activity.TargetWatchTime" />
+        <activity
+            android:name=".UI.Activity.WatchedHistroyScreen"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".UI.Activity.TargetWatchTime"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".UI.MainTabHostScreens.PostContent.UpdateContentUrlScreen" />
-        <activity android:name=".UI.MainTabHostScreens.PostContent.UpdateImageContentScreen"></activity>
+        <activity android:name=".UI.MainTabHostScreens.PostContent.UpdateImageContentScreen" />
+        <activity
+            android:name=".UI.Activity.NewsListCategoryScreen"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Rss.NewsSourcePageScreen"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Rss.NewsSearchActivity"
+            android:theme="@style/AppTheme" />
+        <activity android:name=".Rss.NewsDetailScreen"></activity>
     </application>
 
 </manifest>
